@@ -1,5 +1,4 @@
 DIST plexus-io-1.0_alpha2_pre20070602.tar.bz2 14792 RMD160 5e10dce618374b2ac74d216180023f62324f43a3 SHA1 8eb71152bc9b1480235b865b2d51c30cfee0fb87 SHA256 b9c6f44320aa4dec40261d489f96b2933f01124eeba3839939e5c4ac35110816
-EBUILD plexus-io-1.0_alpha2_pre20070602.ebuild 811 RMD160 b2508b87750e80af091421cb04d78c66314ebb14 SHA1 167eff60cd831c3e6691d2a5513ecf9fc811328d SHA256 7a316d48f2712b8ff2be439e300e850029d41a2e8769acb5da8f3ec23aeaad7f
-MISC ChangeLog 848 RMD160 0a4352e5c99bc75df75aae8400d696f0faea70c7 SHA1 f79c7075ec2f21990b301529795c64df40b4c143 SHA256 4a4b4a29dd56570ac41cc8cb7ba3e2116e7c11871d26938f188189390a91a13b
+EBUILD plexus-io-1.0_alpha2_pre20070602.ebuild 812 RMD160 450f9e86b34e3fcad89ef863404ab521a275ed16 SHA1 678440c304a4279796e219be18e89fa1860f31b2 SHA256 7bf6d00f691ef07756971999968513af51ac2a62d55273dc6041f22bca3c9759
+MISC ChangeLog 375 RMD160 0b49ab5de992e5be37045cd9ecb9685b59f7dc73 SHA1 94eb33795f8997c7b875b1412b9cd7490b6bc515 SHA256 6882ec81fb52b86e2edf9a632da975d151347209e277c380ab889cf4e88296e5
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
-MISC plexus-io-1.0_alpha2_pre20070602.tar.bz2 14792 RMD160 5e10dce618374b2ac74d216180023f62324f43a3 SHA1 8eb71152bc9b1480235b865b2d51c30cfee0fb87 SHA256 b9c6f44320aa4dec40261d489f96b2933f01124eeba3839939e5c4ac35110816
