@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jun 2007; kiorky <kiorky@cryptelium.net>
+  plexus-io-1.0_alpha2_pre20070602.ebuild:
+  Maven 2.1 Bump
+
   09 Jun 2007; kiorky <kiorky@cryptelium.net>
   +plexus-io-1.0_alpha2_pre20070602.ebuild, +metadata.xml:
   Added as a maven dependancy, See #181488
